// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createReactOverride allows passing extra rules 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "@next/next/missing-preload": "warn",
    "@next/next/no-css-tags": "warn",
    "@next/next/no-html-link-for-pages": "warn",
    "@next/next/no-sync-scripts": "warn",
    "@next/next/no-unwanted-polyfillio": "warn",
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [
          "Link",
        ],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "off",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride disables jsx-a11y/autocomplete-valid given a CRA project 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "error",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is < 17 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "error",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is < 17 with Next & TS 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "@next/next/missing-preload": "warn",
    "@next/next/no-css-tags": "warn",
    "@next/next/no-html-link-for-pages": "warn",
    "@next/next/no-sync-scripts": "warn",
    "@next/next/no-unwanted-polyfillio": "warn",
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [
          "Link",
        ],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": "off",
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "off",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is < 17 with Next 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "@next/next/missing-preload": "warn",
    "@next/next/no-css-tags": "warn",
    "@next/next/no-html-link-for-pages": "warn",
    "@next/next/no-sync-scripts": "warn",
    "@next/next/no-unwanted-polyfillio": "warn",
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [
          "Link",
        ],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is < 17 with TS 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": "off",
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "off",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "error",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is >= 17 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is >= 17 with Next & TS 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "@next/next/missing-preload": "warn",
    "@next/next/no-css-tags": "warn",
    "@next/next/no-html-link-for-pages": "warn",
    "@next/next/no-sync-scripts": "warn",
    "@next/next/no-unwanted-polyfillio": "warn",
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [
          "Link",
        ],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": "off",
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "off",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is >= 17 with Next 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "@next/next/missing-preload": "warn",
    "@next/next/no-css-tags": "warn",
    "@next/next/no-html-link-for-pages": "warn",
    "@next/next/no-sync-scripts": "warn",
    "@next/next/no-unwanted-polyfillio": "warn",
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [
          "Link",
        ],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": Array [
      "error",
      "always",
    ],
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "warn",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is >= 17 with TS 1`] = `
Object {
  "extends": Array [],
  "files": Array [
    "**/*.?(ts|js)?(x)",
  ],
  "parser": "babel-eslint",
  "parserOptions": Object {
    "ecmaFeatures": Object {
      "jsx": true,
    },
  },
  "plugins": Array [
    "jsx-a11y",
    "react-hooks",
    "react",
    "@next/eslint-plugin-next",
  ],
  "rules": Object {
    "jsx-a11y/accessible-emoji": "off",
    "jsx-a11y/alt-text": "error",
    "jsx-a11y/anchor-has-content": "error",
    "jsx-a11y/anchor-is-valid": Array [
      "error",
      Object {
        "aspects": Array [
          "noHref",
          "invalidHref",
          "preferButton",
        ],
        "components": Array [],
      },
    ],
    "jsx-a11y/aria-activedescendant-has-tabindex": "warn",
    "jsx-a11y/aria-props": "error",
    "jsx-a11y/aria-proptypes": "error",
    "jsx-a11y/aria-role": Array [
      "warn",
      Object {
        "ignoreNonDOM": true,
      },
    ],
    "jsx-a11y/aria-unsupported-elements": "error",
    "jsx-a11y/autocomplete-valid": "error",
    "jsx-a11y/click-events-have-key-events": "warn",
    "jsx-a11y/control-has-associated-label": "warn",
    "jsx-a11y/heading-has-content": "warn",
    "jsx-a11y/html-has-lang": "warn",
    "jsx-a11y/iframe-has-title": "warn",
    "jsx-a11y/img-redundant-alt": "warn",
    "jsx-a11y/interactive-supports-focus": "error",
    "jsx-a11y/label-has-associated-control": "error",
    "jsx-a11y/label-has-for": "off",
    "jsx-a11y/lang": "error",
    "jsx-a11y/media-has-caption": "warn",
    "jsx-a11y/mouse-events-have-key-events": "error",
    "jsx-a11y/no-access-key": "warn",
    "jsx-a11y/no-autofocus": "error",
    "jsx-a11y/no-distracting-elements": "warn",
    "jsx-a11y/no-interactive-element-to-noninteractive-role": "error",
    "jsx-a11y/no-noninteractive-element-interactions": "error",
    "jsx-a11y/no-noninteractive-element-to-interactive-role": "error",
    "jsx-a11y/no-noninteractive-tabindex": "error",
    "jsx-a11y/no-onchange": "warn",
    "jsx-a11y/no-redundant-roles": "warn",
    "jsx-a11y/no-static-element-interactions": "error",
    "jsx-a11y/role-has-required-aria-props": "error",
    "jsx-a11y/role-supports-aria-props": "error",
    "jsx-a11y/scope": "error",
    "jsx-a11y/tabindex-no-positive": "error",
    "react-hooks/exhaustive-deps": "error",
    "react-hooks/rules-of-hooks": "error",
    "react/boolean-prop-naming": "off",
    "react/button-has-type": "error",
    "react/default-props-match-prop-types": "off",
    "react/destructuring-assignment": "off",
    "react/display-name": "off",
    "react/forbid-dom-props": "off",
    "react/forbid-elements": "off",
    "react/forbid-foreign-prop-types": Array [
      "warn",
      Object {
        "allowInPropTypes": true,
      },
    ],
    "react/forbid-prop-types": "off",
    "react/function-component-definition": Array [
      "warn",
      Object {
        "namedComponents": "function-declaration",
        "unnamedComponents": "arrow-function",
      },
    ],
    "react/jsx-boolean-value": "error",
    "react/jsx-child-element-spacing": "off",
    "react/jsx-closing-bracket-location": "off",
    "react/jsx-closing-tag-location": "off",
    "react/jsx-curly-brace-presence": Array [
      "warn",
      Object {
        "children": "never",
        "props": "never",
      },
    ],
    "react/jsx-curly-newline": "off",
    "react/jsx-curly-spacing": "off",
    "react/jsx-equals-spacing": "off",
    "react/jsx-filename-extension": "off",
    "react/jsx-first-prop-new-line": "off",
    "react/jsx-fragments": Array [
      "warn",
      "syntax",
    ],
    "react/jsx-handler-names": Array [
      "warn",
      Object {
        "checkLocalVariables": false,
        "eventHandlerPrefix": "handle",
        "eventHandlerPropPrefix": "on",
      },
    ],
    "react/jsx-indent": "off",
    "react/jsx-indent-props": "off",
    "react/jsx-key": Array [
      "warn",
      Object {
        "checkFragmentShorthand": true,
      },
    ],
    "react/jsx-max-depth": "off",
    "react/jsx-max-props-per-line": "off",
    "react/jsx-no-bind": "off",
    "react/jsx-no-comment-textnodes": "warn",
    "react/jsx-no-duplicate-props": "error",
    "react/jsx-no-literals": "off",
    "react/jsx-no-script-url": "warn",
    "react/jsx-no-target-blank": "warn",
    "react/jsx-no-undef": "off",
    "react/jsx-no-useless-fragment": "warn",
    "react/jsx-one-expression-per-line": "off",
    "react/jsx-pascal-case": Array [
      "warn",
      Object {
        "allowAllCaps": true,
        "ignore": Array [],
      },
    ],
    "react/jsx-props-no-multi-spaces": "off",
    "react/jsx-props-no-spreading": "off",
    "react/jsx-sort-default-props": "off",
    "react/jsx-sort-props": "off",
    "react/jsx-space-before-closing": "off",
    "react/jsx-tag-spacing": "off",
    "react/jsx-uses-react": "warn",
    "react/jsx-uses-vars": "off",
    "react/jsx-wrap-multilines": "off",
    "react/no-access-state-in-setstate": "off",
    "react/no-adjacent-inline-elements": "off",
    "react/no-array-index-key": "warn",
    "react/no-children-prop": "error",
    "react/no-danger": "warn",
    "react/no-danger-with-children": "error",
    "react/no-deprecated": "error",
    "react/no-did-mount-set-state": "off",
    "react/no-did-update-set-state": "warn",
    "react/no-direct-mutation-state": "error",
    "react/no-find-dom-node": "error",
    "react/no-is-mounted": "error",
    "react/no-multi-com": "off",
    "react/no-redundant-should-component-update": "error",
    "react/no-render-return-value": "off",
    "react/no-set-state": "off",
    "react/no-string-refs": "error",
    "react/no-this-in-sfc": "error",
    "react/no-typos": "error",
    "react/no-unescaped-entities": "off",
    "react/no-unknown-property": "warn",
    "react/no-unsafe": "error",
    "react/no-unused-prop-types": "warn",
    "react/no-unused-state": "warn",
    "react/no-will-update-set-state": "warn",
    "react/prefer-es6-class": "error",
    "react/prefer-read-only-props": "off",
    "react/prefer-stateless-function": "off",
    "react/prop-types": "off",
    "react/react-in-jsx-scope": "off",
    "react/require-default-props": "off",
    "react/require-optimization": "off",
    "react/require-render-return": "error",
    "react/self-closing-comp": "warn",
    "react/sort-comp": "off",
    "react/sort-prop-types": "off",
    "react/state-in-constructor": "off",
    "react/static-property-placement": Array [
      "error",
      "static public field",
    ],
    "react/style-prop-object": "warn",
    "react/void-dom-elements-no-children": "error",
  },
  "settings": Object {
    "react": Object {
      "version": "detect",
    },
  },
}
`;

exports[`createReactOverride matches snapshot if react is false 1`] = `null`;
